Fix alignment of cards in mobile view

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -33,16 +33,19 @@
 
   /*---------------END of CSS RESET---------------*/
 
+body {
+  background-color: #ffeedf;
+}
 
 #root {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     height: 100vh;
     align-items: center;
     justify-content: center;
     margin: auto;
-    column-gap: 62px;
-    background-color: #ffeedf;
+    gap: 62px;
   }
 
 .card {
